[tool.poetry]
name = "tracer"
version = "0.1.0"
description = ""
authors = ["Kevin Zeidler <kzeidler@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<=3.11"
rich = "^12.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
